--- a/Bikarsha Ojha/web-portfolio/main.css
+++ b/Bikarsha Ojha/web-portfolio/main.css
@@ -42,8 +42,8 @@ img {
 
 
 #earth { 
-    width: 100px;
-    height: 100px;
+    width: 72px;
+    height: 72px;
     background: url(svg-logos/invert-earth.jpg);
     border-radius: 50%;
     background-size: 290px;box-shadow: inset 16px 0 40px 3px rgb(0, 0, 0), inset -3px 0 6px 2px rgba(255, 255, 255, 0.2);
@@ -81,6 +81,66 @@ h1 {
     margin-top: 100px;
     padding: 30px;
     text-align: center;
-    font-family: Josefin-Italic;
+    font-family: Josefont;
     
 }
+
+
+p { 
+    padding: 10px;
+    font-family: Josefin-Italic;
+    text-align: center;
+}
+
+
+#prog_information { 
+    font-family: Josefin-Italic;
+    font-size: large;
+    padding: 35px;
+    text-align: center;
+    margin: auto;
+}
+
+
+.expanding-list {
+    list-style: none;
+    padding: 0;
+    
+}
+
+.expanding-list li {
+    background-color: #fff;
+    border: 1px solid #000;
+    margin: 5px;
+    padding: 10px;
+    transition: background-color 0.3s;
+}
+
+.expanding-list li:hover {
+    background-color: #e0e0e0;
+}
+
+.list-item {
+    cursor: pointer;
+    font-family: Josefont;
+}
+
+.item-details {
+    display: none;
+    margin-top: 10px;
+    font-family: Josefin-Italic;
+}
+
+.expanding-list li:hover .item-details {
+    display: block;
+}
+
+#note { 
+    font-size: small;
+    color: #333;
+}
+
+#internships {
+    margin-bottom: 25px;
+}
+
